{{cookiecutter.repo_name}}/k8s/mlflow/minio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
        - name: mlflow-pvc
          persistentVolumeClaim:
            claimName: mlflow-pvc
        - name: minio-initdb
          configMap:
            name: minio-initdb-config
            defaultMode: 0777
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          args:
            - server
            - --console-address
            - :9001
            - /data
          volumeMounts:
            - name: mlflow-pvc
              mountPath: '/data'
            - name: minio-initdb
              mountPath: '/init'
          ports:
            - containerPort: 9000
            - containerPort: 9001
          resources:
            requests:
              cpu: "400m"
              memory: 2048Mi
            limits:
              cpu: "400m"
              memory: 2048Mi
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c", '/init/init.sh' ]
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-minio-service
spec:
  ports:
    - port: 9000
      name: s3
    - port: 9001
      name: minio-console
  selector:
    app: minio
---
apiVersion: "route.openshift.io/v1"
kind: Route
metadata:
  name: minio-console
spec:
  host: ""
  path: ""
  port:
    targetPort: 9001
  tls: null
  to:
    kind: Service
    name: mlflow-minio-service
    weight: 100
---
apiVersion: "route.openshift.io/v1"
kind: Route
metadata:
  name: minio-api
spec:
  host: ""
  path: ""
  port:
    targetPort: 9000
  tls: null
  to:
    kind: Service
    name: mlflow-minio-service
    weight: 100
